# dotfile-manager

./: .editorconfig  CHANGELOG.md  Makefile  README.md  meson.build  meson_options.txt
src/: action.c  action.h  ansi-esc.h  config.c  config.h  config.h.in  core.c  core.h  dotfile-manager.c  dotfile-manager.sh  macros.h  meson.build  msg.c  msg.h  path.c  path.h  path_private.h  settings.c  settings.h  settings_private.h
